# bq-gcs-dataflow-terraform

./: Makefile  README.md  dataflow_etl.py  pyproject.toml
.github/workflows/: validator.yml
terraform/: main.tf  variables.tf
terraform/modules/bigquery_dataset/: main.tf  outputs.tf  variables.tf
terraform/modules/data_catalog/: main.tf  outputs.tf  variables.tf
terraform/modules/gcs_buckets/: main.tf  outputs.tf  variables.tf
terraform/values/: production.tfvars
