[project]
name = "cdp-dataflow"
version = "0.1.0"
description = "Google Cloud Data Platform with Dataflow"
requires-python = ">=3.8"
dependencies = [
    "apache-beam[gcp]",
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"